--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ exportClasses(BioMDA)
 exportMethods(biomda_branch)
 exportMethods(biomda_disge_ora)
 exportMethods(biomda_enrich)
+exportMethods(show)
 importFrom(RCurl,postForm)
 importFrom(clusterProfiler,bitr)
 importFrom(clusterProfiler,enricher)
@@ -39,6 +40,7 @@ importFrom(methods,new)
 importFrom(methods,setClass)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
+importFrom(methods,show)
 importFrom(pillar,style_subtle)
 importFrom(stats,phyper)
 importFrom(tibble,add_column)
