--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(biomda_db_api)
 export(biomda_disge_ora)
 export(biomda_enrich)
 export(compound2cid)
+export(diff_metabolites)
 export(disease2doid)
 export(disgene_search)
 export(protein2stringid)
@@ -13,12 +14,18 @@ export(ssimcid_search)
 export(stitch_network)
 export(string_network)
 export(tgtp_search)
+export(wgcna_analysis)
 exportClasses(BioMDA)
 exportMethods(biomda_branch)
 exportMethods(biomda_disge_ora)
 exportMethods(biomda_enrich)
 exportMethods(show)
 importFrom(RCurl,postForm)
+importFrom(Rcpp,evalCpp)
+importFrom(Rcpp,sourceCpp)
+importFrom(WGCNA,adjacency)
+importFrom(WGCNA,mergeCloseModules)
+importFrom(WGCNA,pickSoftThreshold)
 importFrom(clusterProfiler,bitr)
 importFrom(clusterProfiler,enricher)
 importFrom(digest,digest)
@@ -26,6 +33,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,if_else)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
@@ -35,14 +43,24 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,slice_head)
 importFrom(dplyr,ungroup)
+importFrom(dynamicTreeCut,cutreeDynamic)
+importFrom(flashClust,flashClust)
 importFrom(jsonlite,fromJSON)
 importFrom(methods,new)
 importFrom(methods,setClass)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
 importFrom(methods,show)
+importFrom(pROC,roc)
 importFrom(pillar,style_subtle)
+importFrom(ropls,getVipVn)
+importFrom(ropls,opls)
+importFrom(stats,as.dist)
+importFrom(stats,na.omit)
+importFrom(stats,p.adjust)
 importFrom(stats,phyper)
+importFrom(stats,t.test)
+importFrom(stats,wilcox.test)
 importFrom(tibble,add_column)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
@@ -51,3 +69,4 @@ importFrom(tidyr,separate_longer_delim)
 importFrom(utils,download.file)
 importFrom(utils,globalVariables)
 importFrom(utils,packageDescription)
+useDynLib(biomda)
